--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/core": "^0.5.2",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@urql/exchange-graphcache": "^3.1.0",
     "emotion-theming": "^10.0.27",
     "formik": "^2.2.0",
     "graphql": "^15.3.0",
@@ -29,7 +30,23 @@
     "@types/node": "^14.11.8",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-config-prettier": "^6.10.1",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
