--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -25,7 +25,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "react",
+    "baseUrl": "./src"
   },
   "include": [
     "next-env.d.ts",
