--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -25,7 +25,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react",
+    "jsx": "preserve",
     "baseUrl": "./src"
   },
   "include": [
