--- a/web/package.json
+++ b/web/package.json
@@ -16,9 +16,12 @@
     "emotion-theming": "^10.0.27",
     "formik": "^2.2.0",
     "graphql": "^15.4.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "^9.1.7",
+    "next-urql": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-is": "^17.0.1",
     "urql": "^1.11.0"
   },
   "license": "MIT",
@@ -29,8 +32,8 @@
     "@graphql-codegen/typescript-urql": "^2.0.2",
     "@types/node": "^14.11.8",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
