--- a/web/package.json
+++ b/web/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "with-chakra-ui",
+  "name": "lireddit-front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "types:graph": "graphql-codegen --config codegen.yml"
+    "types:graph": "graphql-codegen --config codegen.yml",
+    "eslint": "eslint --ext ts,tsx",
+    "lint": "yarn eslint src"
   },
   "dependencies": {
     "@chakra-ui/core": "^0.5.2",
@@ -31,14 +33,16 @@
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@graphql-codegen/typescript-urql": "^2.0.2",
     "@types/node": "^14.11.8",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
