--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "create:migration": "mikro-orm migration:create",
     "start": "node dist/index.ts",
     "dev2": "nodemon --exect ts-node src/index.ts",
-    "start2": "ts-node src/index.ts"
+    "start2": "ts-node src/index.ts",
+    "eslint": "eslint --ext ts,tsx",
+    "lint": "yarn eslint src"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +22,17 @@
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
     "@types/node": "^14.11.2",
+    "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "class-validator": "^0.12.2",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4",
+    "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
@@ -38,6 +48,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
+    "nodemailer": "^6.4.15",
     "pg": "^8.3.3",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
