--- a/server/package.json
+++ b/server/package.json
@@ -21,9 +21,11 @@
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
+    "@types/ioredis": "^4.17.7",
     "@types/node": "^14.11.2",
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "class-validator": "^0.12.2",
@@ -48,11 +50,12 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
+    "ioredis": "^4.19.2",
     "nodemailer": "^6.4.15",
     "pg": "^8.3.3",
-    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.1"
   },
   "mikro-orm": {
     "useTsNode": true,
