--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "types:graph": "graphql-codegen --config codegen.yml",
+    "gen": "graphql-codegen --config codegen.yml",
     "eslint": "eslint --ext ts,tsx",
     "lint": "yarn eslint src"
   },
