--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "create:migration": "mikro-orm migration:create",
     "start": "node dist/index.ts",
     "dev2": "nodemon --exect ts-node src/index.ts",
     "start2": "ts-node src/index.ts",
@@ -39,10 +38,6 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.0.7",
-    "@mikro-orm/core": "^4.0.7",
-    "@mikro-orm/migrations": "^4.0.7",
-    "@mikro-orm/postgresql": "^4.0.7",
     "apollo-server-express": "^2.18.2",
     "argon2": "^0.27.0",
     "connect-redis": "^5.0.0",
@@ -55,13 +50,7 @@
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.29",
     "uuid": "^8.3.1"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
