--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.ts",
-    "dev2": "nodemon --exect ts-node src/index.ts",
-    "start2": "ts-node src/index.ts",
+    "build": "tsc",
+    "envs": "gen-env-types .env -o src/env.d.ts -e .",
     "eslint": "eslint --ext ts,tsx",
     "lint": "yarn eslint src"
   },
@@ -32,6 +31,7 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "gen-env-types": "^1.0.4",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
@@ -43,6 +43,7 @@
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "dataloader": "^2.0.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
