--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -7,7 +7,7 @@
       "esnext"
     ],
     "allowJs": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
