--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "lint": "yarn eslint src"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.4",
     "@chakra-ui/core": "^0.5.2",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
@@ -21,6 +22,7 @@
     "graphql-tag": "^2.11.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^9.1.7",
+    "next-apollo": "^5.0.4",
     "next-urql": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -32,6 +34,7 @@
     "@graphql-codegen/cli": "1.18.0",
     "@graphql-codegen/typescript": "1.17.11",
     "@graphql-codegen/typescript-operations": "1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@graphql-codegen/typescript-urql": "^2.0.2",
     "@types/node": "^14.11.8",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
